<resources>
    <string name="app_name">ShoesShop</string>
    <string name="tv_profile">Profile</string>
    <string name="tv_my_cart">My cart</string>
    <string name="tv_favorite">Favorite</string>
    <string name="tv_orders">Orders</string>
    <string name="tv_product">Product</string>
    <string name="tv_home">Home</string>
    <string name="tv_notification">Notification</string>
    <string name="tv_setting">Setting</string>
    <string name="tv_sign_out">Sign out</string>
    <string name="tv_name">Emmanuel IBrokers</string>
    <string name="tv_explore">Explore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_select_category">Select Category</string>
    <string name="tv_popular_shoes">Popular Shoes</string>
    <string name="tv_see_all">See all</string>
    <string name="tv_edit_user">Edit User</string>


    <!-- OnBoarding -->
    <string name="title_on_boarding_first_slide">Welcome</string>
    <string name="description_on_boarding_first_slide">Find your desired car parts, make a request and get them as soon as possible!</string>
    <string name="title_on_boarding_second_slide">Use VIN code</string>
    <string name="description_on_boarding_second_slide">Input VIN code of your car to specify car parts</string>
    <string name="title_on_boarding_third_slide">Make a request</string>
    <string name="description_on_boarding_third_slide">Request an order with the chosen products from the shopping cart</string>
    <string name="title_button_get_started">Get Started</string>
    <string name="text_get_started">Get Started</string>
    <string name="text_next">Next</string>


    <string name="title_onboarding_1">Welcome to Onboarding App !</string>
    <string name="description_onboarding_1">Here is an open-source project which shows sweet &amp; original onboarding ViewPagers that follows Material Design Guidelines</string>

    <string name="title_onboarding_2">Try AirBnB Lottie</string>
    <string name="description_onboarding_2">We use Lottie Animations on our Intro to make it interactive &amp; pleasant. Did you already tried it ? If no, let\'s start now. It\'s just awesome</string>

    <string name="title_onboarding_3">Code beautiful apps</string>
    <string name="description_onboarding_3">Our mission is to make useful &amp; subtle apps. We love help people to save time with open-source stuffs, but we also make life easier by creating new things. Good Coding!</string>
    <string name="text_hint_email">xyz@gmail.com</string>
    <string name="text_email_address_title">Email Address</string>
    <string name="text_password_title">Password</string>
    <string name="text_password_hint">••••••••••••</string>
    <string name="text_recovery_password">Recovery Password</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_new_user_create_account"><font color="#6A6A6A">New User?</font> <font color="#1A1D1E"> Create Account</font></string>
    <string name="text_your_name">Your Name</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_sign_in_with_google">Sign In With Google</string>
    <string name="text_sign_up_with_google">Sign Up With Google</string>
    <string name="text_already_have_account_log_in"><font color="#1A1D1E">Already Have Account?</font> <font color="#6A6A6A"> Log In</font></string>
    <string name="text_hello_again">Hello Again!</string>
    <string name="text_description_login">Fill your details or continue with social media</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_register_account">Register Account</string>
    <string name="text_description_register">Fill your details or continue with social media</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_description_forgot_password">Enter your Email account to reset your password</string>
    <string name="text_check_your_email">Check your email</string>
    <string name="text_description_popup_reset_password">We have send password recovery code in your email</string>
    <string name="text_otp_code">OTP Code</string>
    <string name="text_verify">Verify</string>
    <string name="text_resend_code_to">Resend code to</string>
    <string name="text_otp_verification">OTP Verification</string>
    <string name="text_description_otp">Please check your email to see the verification code</string>
    <string name="text_resend_otp">Resend OTP</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="text_looking_for_shoes">Looking for shoes</string>
    <string name="text_no_data">No Data</string>
    <string name="text_best_seller">Best Seller</string>
    <string name="text_price">$%1$s</string>
    <string name="text_popular_shoes_title">Popular Shoes</string>
    <string name="text_favourite_title">Favourite</string>
    <string name="text_subtotal">Subtotal</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_item_cart_quantity">%1$s Item</string>
    <string name="text_my_cart">My Cart</string>
    <string name="text_contact_information">Contact Information</string>
    <string name="text_address">Address</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_your_payment_is_successful">Your Payment Is Successful</string>
    <string name="text_back_to_shopping">Back To Shopping</string>
    <string name="text_recent">Recent</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_save_now">Save Now</string>
    <string name="text_profile">Profile</string>
    <string name="text_order">Detail Order</string>
    <string name="text_change_profile_picture">Change Profile Picture</string>
    <string name="text_done">Done</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_location">Location</string>
    <string name="text_mobile_number">Mobile Number</string>
    <string name="text_search_your_shoes">Search Your Shoes</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_search">Search</string>
    <string name="text_read_more">Read More</string>
    <string name="text_sneaker_shop">Sneaker Shop</string>
    <string name="tv_confirm">Confirm</string>
    <string name="tv_input_your_number">Input your number</string>
    <string name="tv_input_your_address">Input your address</string>

</resources>