<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_of_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/layout_header"
            layout="@layout/layout_header" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_of_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layout_of_header">

                <include
                    android:id="@+id/layout_title_auth_screen"
                    layout="@layout/layout_title_auth_screen" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_title_otp_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_13"
                android:layout_marginEnd="@dimen/spacing_13"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/text_otp_code"
                android:textSize="@dimen/text_size_16" />

            <com.otpview.OTPTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_10"
                android:layout_marginBottom="@dimen/spacing_20"
                android:textColor="@android:color/black"
                app:box_margin="@dimen/spacing_5"
                app:height="@dimen/_43sdp"
                app:hide_otp="false"
                app:hide_otp_drawable="@drawable/bg_otp_box_hide"
                app:length="4"
                app:otp=""
                app:otp_box_background="@drawable/bg_otp_box"
                app:otp_box_background_active="@drawable/bg_otp_box_active"
                app:otp_box_background_error="@drawable/bg_otp_box_error"
                app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
                app:otp_box_background_success="@drawable/bg_otp_box_success"
                app:otp_text_size="@dimen/text_size_16"
                app:width="@dimen/_55sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_verify"
                style="@style/ButtonStyleMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_10"
                android:layout_marginTop="@dimen/spacing_20"
                android:paddingStart="@dimen/spacing_10"
                android:paddingTop="@dimen/spacing_10"
                android:paddingEnd="@dimen/spacing_10"
                android:paddingBottom="@dimen/spacing_15"
                android:text="@string/text_verify" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_13"
                android:layout_marginEnd="@dimen/spacing_13">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_semibold"
                    android:text="@string/text_resend_code_to"
                    android:textColor="@color/grey_3"
                    android:textSize="@dimen/text_size_10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_count_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_semibold"
                    android:text="00:30"
                    android:textColor="@color/grey_3"
                    android:textSize="@dimen/text_size_10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_95sdp"
                android:layout_marginTop="@dimen/spacing_40"
                android:src="@drawable/_img_banner" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>